--- a/app/home/index.html
+++ b/app/home/index.html
@@ -1,91 +1,179 @@
 ﻿
-<h1>Hi {{vm.user.firstName}}!!</h1>
-<h1 align="center">SEARCH ENGINE</h1>
+<h4 id="firstname">{{vm.user.firstName}}</h4><br>
 
-<div class="form-group" >
-     <input type ="text" id="title" class="col-md-6" align="center" placeholder = "Search here">
+<h1 align="left">SEARCH ENGINE</h1>
 
-     <button class="btn btn-primary" onclick="advsearch()" type="submit" name="button">go</button>
-     <!-- <button class ="search-btn" type="button"> </button> -->
-     </div>
-     <!-- <div class="form-group">
+<div class="form-group">
+  <input type="text" id="title" class="col-md-6" align="center" placeholder="Search a book">
+
+  <button class="btn btn-primary" onclick="advsearch()" type="submit" name="button">go</button>
+  <!-- <button class ="search-btn" type="button"> </button> -->
+</div>
+<!-- <div class="form-group">
      <button class="btn btn-primary" type="button" name="button">Advanced Search</button>
      </div> -->
-     <div class="mt-3"> <a data-toggle="collapse" href="#collapseExample" role="button"id =title aria-expanded="false" aria-controls="collapseExample" class="advanced"> Advance Search With Filters <i class="fa fa-angle-down"></i> </a>
-                         <div class="collapse" id="collapseExample">
-                             <div class="card card-body">
-                                 <div class="row">
-                                     <div class="col-md-4"> <input type="text" id ="Description" placeholder="Search in description" class="form-control"> </div>
-                                     <div class="col-md-4"> <input type="text" id="Author" class="form-control" placeholder="Search by Author"> </div>
-                                     <div class="col-md-4"> <input type="text" id ="Department" class="form-control" placeholder="Search by Departmrnt"> </div>
-                                 </div>
-                             </div>
-                         </div>
-                     </div>
-                     <strong>
-                     <div class="titles">
+<div class="mt-3"> <a data-toggle="collapse" href="#collapseExample" role="button" id=title aria-expanded="false" aria-controls="collapseExample" class="advanced"> Advance Search With Filters <i class="fa fa-angle-down"></i> </a>
+  <div class="collapse" id="collapseExample">
+    <div class="card card-body">
+      <div class="row">
+        <div class="col-md-4"> <input type="text" id="Description" placeholder="Search in description" class="form-control"> </div>
+        <div class="col-md-4"> <input type="text" id="Author" class="form-control" placeholder="Search by Author"> </div>
+        <div class="col-md-4"> <input type="text" id="Department" class="form-control" placeholder="Search by Departmrnt"> </div>
+      </div>
+    </div>
+  </div>
+</div>
+<strong>
+  <div class="titles">
 
-                     </div>
-                     <div class="count">
+  </div>
+  <div class="count">
 
-                     </div>
+  </div>
 
 
-                     <div class="results">
+  <div class="results">
 
-                     </div>
+  </div>
 </strong>
-                     <script type="text/javascript">
-                           function advsearch(){
-                             var userObj={
-                            title:document.getElementById("title").value,
-                            Description:document.getElementById("Description").value,
-                             Author:document.getElementById("Author").value,
-                            Department:document.getElementById("Department").value
-                           }
-                          var token=window.jwtToken;
-                           if(token==undefined){
-                             window.location.href = '/login';
-                           }
-                           var xhttp = new XMLHttpRequest();
-                             xhttp.onreadystatechange = function() {
-                               if (this.readyState == 4 && this.status == 200) {
-                                 // window.location.href='/index';
-                                  // document.getElementById("demo").innerHTML = this.responseText;
-                                 console.log(this.responseText);
-                                 var response=JSON.parse(this.responseText);
-                                 var hits=response.hits.hits;
-                                 var results=document.getElementsByClassName('results')[0];
-                                 results.innerHTML="";
-
-                                 var titles = document.getElementsByClassName('titles')[0];
-                                 titles.innerHTML='<p> Searching for: '+userObj.title+'</p>';
-                                 var k=1;
-                                 var count=response.hits.total.value;
-                                 var counts=document.getElementsByClassName('count')[0];
-
-                                 counts.innerHTML='<p>'+'Total matches:'+count+'<br /> Matching Results:</p>';
-                                 for (var i in hits){
-                                   var div=document.createElement('div');
 
 
-                                   div.setAttribute('class','item');
-                                   div.innerHTML='<p>'+k+') '+'<a href=/api/users/getbook/'+hits[i]._id+'>'+hits[i]._source.title+'\n'+'</a></p>';
-                                   k+=1;
-                                   results.appendChild(div);
-                                 }
+<script type="text/javascript">
 
-                               }
-                         };
+  window.onload = function advsearch() {
 
-                             xhttp.open("POST", "/api/users/advsearch", true);
-                            xhttp.setRequestHeader("Content-type", "application/json");
-                           xhttp.setRequestHeader("Authorization","Bearer "+token);
-                           xhttp.send(JSON.stringify(userObj));
+    var displayname = document.getElementById('firstname').value;
+    localStorage.setItem('displayname',displayname);
 
 
 
-                            }
+
+    var advtitle = localStorage.getItem('advtitle');
+    var descriptionst = localStorage.getItem('description');
+    var authorst = localStorage.getItem('author');
+    var departmentst = localStorage.getItem('department');
+
+    var userObj = {
+      title: advtitle,
+      Description: descriptionst,
+      Author: authorst,
+      Department: departmentst
+    }
+    var token = window.jwtToken;
+    var myHilitor = new Hilitor(userObj.title); // id of the element to parse
+    myHilitor.apply();
+    if (token == undefined) {
+      window.location.href = '/login';
+    }
+    var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function() {
+      if (this.readyState == 4 && this.status == 200) {
+        // window.location.href='/index';
+        // document.getElementById("demo").innerHTML = this.responseText;
+        console.log(this.responseText);
+        var response = JSON.parse(this.responseText);
+        var hits = response.hits.hits;
+        var results = document.getElementsByClassName('results')[0];
+        results.innerHTML = "";
+
+        var titles = document.getElementsByClassName('titles')[0];
+        titles.innerHTML = '<p> Searching for: title:<h6>' + userObj.title + ',</h6> Description:<h6>' + userObj.Description + ',</h6> Author:<h6>' + userObj.Author + ',</h6> Department:<h6>' + userObj.Department + '</h6></p>';
+        var k = 1;
+        var count = response.hits.total.value;
+        var counts = document.getElementsByClassName('count')[0];
+
+        counts.innerHTML = '<p>' + 'Total matches:' + count + '<br /> Matching Results:</p>';
+        for (var i in hits) {
+          var div = document.createElement('div');
 
 
-                              </script>
+          div.setAttribute('class', 'item');
+          div.innerHTML = '<p>' + k + ') ' + '<a href=/api/users/getbook/' + hits[i]._id + '>' + hits[i]._source.title + '\n' + '</a></p>';
+          k += 1;
+          results.appendChild(div);
+        }
+
+      }
+    };
+
+    xhttp.open("POST", "/api/users/advsearch", true);
+    xhttp.setRequestHeader("Content-type", "application/json");
+    xhttp.setRequestHeader("Authorization", "Bearer " + token);
+    xhttp.send(JSON.stringify(userObj));
+
+
+
+  }
+
+  function advsearch() {
+    var displayname = localStorage.getItem('userdetails')
+
+    console.log(displayname);
+
+    var Title = document.getElementById("title").value;
+    var titlestrip = Title.replace(/(<([^>]+)>)/gi, "");
+    localStorage.setItem('advtitle', titlestrip);
+    var Description = document.getElementById("Description").value;
+    var descriptionstrip = Description.replace(/(<([^>]+)>)/gi, "");
+    localStorage.setItem('description', descriptionstrip);
+    var Author = document.getElementById("Author").value;
+    var authorstrip = Author.replace(/(<([^>]+)>)/gi, "");
+    localStorage.setItem('author', authorstrip);
+    var Department = document.getElementById("Department").value;
+    var departmentstrip = Department.replace(/(<([^>]+)>)/gi, "");
+    localStorage.setItem('department', departmentstrip);
+    var advtitle = localStorage.getItem('advtitle');
+    var descriptionst = localStorage.getItem('description');
+    var authorst = localStorage.getItem('author');
+    var departmentst = localStorage.getItem('department');
+    var userObj = {
+      title: advtitle,
+      Description: descriptionst,
+      Author: authorst,
+      Department: departmentst
+    }
+
+    var token = window.jwtToken;
+    if (token == undefined) {
+      window.location.href = '/login';
+    }
+    var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function() {
+      if (this.readyState == 4 && this.status == 200) {
+        // window.location.href='/index';
+        // document.getElementById("demo").innerHTML = this.responseText;
+        console.log(this.responseText);
+        var response = JSON.parse(this.responseText);
+        var hits = response.hits.hits;
+        var results = document.getElementsByClassName('results')[0];
+        results.innerHTML = "";
+
+        var titles = document.getElementsByClassName('titles')[0];
+        titles.innerHTML = '<p> Searching for: title:<h6>' + userObj.title + ',</h6> Description:<h6>' + userObj.Description + ',</h6> Author:<h6>' + userObj.Author + ',</h6> Department:<h6>' + userObj.Department + '</h6></p>';
+        var k = 1;
+        var count = response.hits.total.value;
+        var counts = document.getElementsByClassName('count')[0];
+
+        counts.innerHTML = '<p>' + 'Total matches:' + count + '<br /> Matching Results:</p>';
+        for (var i in hits) {
+          var div = document.createElement('div');
+
+
+          div.setAttribute('class', 'item');
+          div.innerHTML = '<p>' + k + ') ' + '<a href=/api/users/getbook/' + hits[i]._id + '>' + hits[i]._source.title + '\n' + '</a></p>';
+          k += 1;
+          results.appendChild(div);
+        }
+
+      }
+    };
+
+    xhttp.open("POST", "/api/users/advsearch", true);
+    xhttp.setRequestHeader("Content-type", "application/json");
+    xhttp.setRequestHeader("Authorization", "Bearer " + token);
+    xhttp.send(JSON.stringify(userObj));
+
+
+
+  };
+</script>
